# docs/swagger.yaml
@@ -61,6 +61,7 @@ paths:
     post:
       consumes:
       - application/json
+      description: Authenticate a user and return JWT token
       parameters:
       - description: User login details
         in: body
@@ -68,9 +69,11 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/users.SignInRequest'
+      produces:
+      - application/json
       responses:
         "200":
-          description: User authenticated successfully
+          description: User authenticated successfully with token
           schema:
             additionalProperties:
               type: string
@@ -90,6 +93,7 @@ paths:
     post:
       consumes:
       - application/json
+      description: Register a new user account
       parameters:
       - description: User registration details
         in: body
@@ -97,6 +101,8 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/users.SignUpRequest'
+      produces:
+      - application/json
       responses:
         "201":
           description: User created successfully
@@ -119,6 +125,7 @@ paths:
     post:
       consumes:
       - application/json
+      description: Create a new story with authentication required
       parameters:
       - description: Story content
         in: body
@@ -126,8 +133,36 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/types.StoryPostRequest'
-      responses: {}
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Story created successfully
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - BearerAuth: []
       summary: Create a new story
       tags:
       - stories
+securityDefinitions:
+  BearerAuth:
+    description: Type "Bearer" followed by a space and JWT token.
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
